Updates To Template

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -1,2 +1,5 @@
-@import '_layout/header';
-@import '_layout/typography';
+@import './foundation/foundation';
+@import './_components/global';
+@import './_components/header';
+@import './_components/footer';
+@import './_components/typography';
