--- a/src/_partials/header.ejs
+++ b/src/_partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
-    <div class="logo"><img src="../assets/img/logos/gyro-1.png"></div>
-    <h1 class="title">Test Page</h1>
-</header>
+
+     <a href="javascript:void(0);"><img src="../assets/img/logos/gyro-1.png" width="100"></a>
+     <h1>Massive Headline!! near an image!</h1>
+   
